# CoService

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  bsocket.cpp  co.cpp  grpc.cpp  helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h  kafka.cpp  kafka_util.cpp  kafka_util.h  redis.cpp  uvtest.cpp
src/: CMakeLists.txt  wf_framework.cpp
src/core/: channel.h  config.h  crc16.cpp  crc16.h  threadpool.cpp  threadpool.h  wf_kafka.cpp  wf_kafka.h  wf_log.cpp  wf_log.h  wf_time.cpp  wf_time.h
src/core/json/: wf_queue_item.cpp  wf_queue_item.h
src/core/json/nlohmann/: json.hpp
src/core/modules/easn/: easn.cpp  easn.h  easn_client_manager.cpp  easn_client_manager.h  easn_connection.cpp  easn_connection.h  easn_dispatch_channel.cpp  easn_dispatch_channel.h  easn_dispatcher_manager.cpp  easn_dispatcher_manager.h  easn_kafka_dispatcher.cpp  easn_kafka_dispatcher.h  easn_package.cpp  easn_package.h  easn_server_channel.cpp  easn_server_channel.h
src/event/: wf_co_event.cpp  wf_co_event.h  wf_event.cpp  wf_event.h
src/include/: wf_framework.h
tests/: CMakeLists.txt  test_crc.cpp  test_packet_split.cpp  test_protocol.cpp  test_util.cpp  test_util.h
